--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -28,6 +28,9 @@
         align-content: center;
         justify-content: space-between;
         align-items: center;
+        &--flex-end {
+            justify-content: flex-end;
+        }
     }
     &__menu {
         &-mobile {
@@ -242,6 +245,19 @@
         display: flex;
         justify-content: space-between;
     }
+    &__inner {
+        position: relative;
+        .privacy-link {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            font-size: 10px;
+            color:#fff;
+            &:hover {
+                color:#fff;
+            }
+        }
+    }
     &__inner-items {
         a {
             color: #fff;
@@ -352,4 +368,10 @@
             margin-top: 19px;
         }
     }
+}
+
+.title-privacy {
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
 }
